--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,26 @@
 :root {
   --dark-gray: #2c3e50;
+  --acquamarine: #1abc9c;
+}
+
+.debug {
+  min-height: 80px;
+  border: 1px solid black;
+  background-color: rgba(255, 0, 0, 0.2);
 }
 
 header {
   height: 90px;
   background-color: var(--dark-gray);
+}
+
+main section:nth-child(odd) {
+  background-color: var(--acquamarine);
+  color: white;
+}
+
+.container-cst-small {
+  width: 100%;
+  max-width: 600px;
+  margin: 0 auto;
 }
