--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 :root {
   --dark-gray: #2c3e50;
-  --acquamarine: #1abc9c;
   --dark-blue: #3a546d;
+  --acquamarine: #1abc9c;
 }
 
 .debug {
@@ -38,4 +38,5 @@ footer .footer-top {
 
 footer .footer-bottom {
   background-color: var(--dark-gray);
+  height: 110px;
 }
