--- a/css/style.css
+++ b/css/style.css
@@ -118,8 +118,10 @@ main #portfolio .card-cst .overlay i {
 main #portfolio .card-cst:hover .overlay {
   display: block;
 }
-
 /* end portfolio */
+
+/* about */
+/* about */
 
 
 
