--- a/css/style.css
+++ b/css/style.css
@@ -120,8 +120,30 @@ main #portfolio .card-cst:hover .overlay {
 }
 /* end portfolio */
 
-/* about */
-/* about */
+/* contact-me */
+.input-cst {
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-radius: 0;
+  padding-left: 0;
+}
+
+.input-cst::placeholder {
+  color: black;
+}
+
+.button-cst {
+  background-color: var(--green);
+  border: none;
+}
+
+.button-cst:hover {
+  background-color: rgb(16, 140, 99);
+
+}
+
+/* end contact-me */
 
 
 
