--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@ main #portfolio .card-cst:hover .overlay {
 /* end portfolio */
 
 /* contact-me */
-#contact.me .input-cst {
+#contact-me .input-cst {
   border-top: none;
   border-left: none;
   border-right: none;
@@ -137,19 +137,19 @@ main #portfolio .card-cst:hover .overlay {
   padding-left: 0;
 }
 
-#contact.me .input-cst::placeholder {
+#contact-me .input-cst::placeholder {
   color: var(--dark-gray);
   font-size: 1.1rem;
 }
 
-#contact.me .button-cst {
+#contact-me .button-cst {
   background-color: var(--green);
   color: white;
   font-size: 1.2rem;
   border: none;
 }
 
-#contact.me .button-cst:hover {
+#contact-me .button-cst:hover {
   color: white;
   background-color: rgba(6, 148, 120, 0.8);
 }
